bug: alignment with Mapbox controls

--- a/src/Map/Hud/hud.css
+++ b/src/Map/Hud/hud.css
@@ -1,7 +1,7 @@
 .womo-hud {
   position: absolute;
-  top: 5px;
-  left: 5px;
+  top: 10px;
+  left: 10px;
   z-index: 10;
   background: white;
   box-shadow: 0 0 0 2px #0000001a;
